@@ -256,6 +256,10 @@ several `FSD` notifications into one executed action. [PR #3097]
  - Updated `docs/*.txt`: add asciidoc comments with links to nut-website
    rendered contents of most interesting pages. [#3095]
 
+ - Added a `make dist-docs` goal to generate, collect and tarball all document
+   types (man, html-single, html-chunked, pdf) that we may have enabled for the
+   current build configuration and available tooling. [#1400]
+
  - Source directory `data/html` was renamed to `data/htmlcgi` in order to
    better reflect its contents and purpose, compared to documentation-oriented
    `html*` directories (and recipe variable names). This may impact some
